--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,7 @@
   "singleQuote": true,
   "trailingComma": "es5",
   "bracketSameLine": true,
+  "endOfLine": "auto",
   "overrides": [
     {
       "files": "*.html",
